--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,12 @@
         "no-console": "error",
         "no-new": 0
       }
+    },
+    {
+      "files": ["src/database/models/*.ts"],
+      "rules": {
+        "@typescript-eslint/naming-convention": "off"
+      }
     }
   ],
   "parserOptions": {
