--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
   "devDependencies": {
     "@commitlint/cli": "^17.6.3",
     "@commitlint/config-conventional": "^17.6.3",
+    "@types/debug": "^4.1.7",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
+    "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.4",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
@@ -24,12 +27,16 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-xo": "^0.43.1",
     "eslint-config-xo-typescript": "^0.57.0",
+    "husky": "^8.0.0",
     "lint-staged": "^13.2.2",
-    "typescript": "^5.0.4",
-    "husky": "^8.0.0"
+    "typescript": "^5.0.4"
   },
   "dependencies": {
+    "chalk": "^5.2.0",
+    "debug": "^4.3.4",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongoose": "^7.1.1",
     "morgan": "^1.10.0"
   }
 }
