--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,8 @@
         ],
         "no-unused-vars": "error",
         "no-console": "error",
-        "no-new": 0
+        "no-new": 0,
+        "@typescript-eslint/naming-convention": "off"
       }
     }
   ],
