--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start:dev": "node --watch dist",
     "build": "tsc",
     "build:dev": "tsc --watch",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest",
+    "test:dev": "jest --watchAll"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +21,7 @@
     "@types/debug": "^4.1.7",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.1",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.4",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
@@ -28,7 +31,10 @@
     "eslint-config-xo": "^0.43.1",
     "eslint-config-xo-typescript": "^0.57.0",
     "husky": "^8.0.0",
+    "jest": "^29.5.0",
+    "jest-ts-webcompat-resolver": "^1.0.0",
     "lint-staged": "^13.2.2",
+    "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
   },
   "dependencies": {
