Add Sonar configs and fix bug smells

--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,4 +1,4 @@
 {
-  "*.{ts}": "eslint --max-warnings=0",
-  "*.{ts,json,md}": "prettier --write"
+  "*.{ts,tsx}": "eslint --max-warnings=0",
+  "*.{ts,tsx,css,json,md}": "prettier --write"
 }
