--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.2",
     "chalk": "^5.2.0",
     "debug": "^4.3.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.1",
     "morgan": "^1.10.0",
     "prettier": "^2.8.8"
