--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/jsonwebtoken": "^9.0.2",
+    "bcryptjs": "^2.4.3",
     "chalk": "^5.2.0",
     "debug": "^4.3.4",
     "dotenv": "^16.0.3",
